<resources>
    <string name="app_name">Honey Milk Shop</string>

    <!-- Buttons -->
    <string name="btn_add">Add</string>
    <string name="btn_add_date_range">Add Date Range</string>
    <string name="btn_add_image">Add Image</string>
    <string name="btn_add_new_color">Add New color</string>
    <string name="btn_add_new_size">Add New Size</string>
    <string name="btn_add_new_type">Add New Presentation</string>
    <string name="btn_add_order_item_comment">Add comment</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_close">Close</string>
    <string name="btn_copy_to_clipboard">Copy to Clipboard</string>
    <string name="btn_delete_design">Delete Design</string>
    <string name="btn_delete_order">Delete Order</string>
    <string name="btn_designs_list">Designs List</string>
    <string name="btn_discard">Discard</string>
    <string name="btn_edit_order">Edit Order</string>
    <string name="btn_forgot_password">Forgot password? Click here.</string>
    <string name="btn_later">Later</string>
    <string name="btn_login">Login</string>
    <string name="btn_new_campaign">New Campaign</string>
    <string name="btn_new_design">New Design</string>
    <string name="btn_new_order">New Order</string>
    <string name="btn_next">Next</string>
    <string name="btn_no">No</string>
    <string name="btn_ok">OK</string>
    <string name="btn_password_recovery">Send Password Recovery Email</string>
    <string name="btn_save">Save</string>
    <string name="btn_sign_up">Register</string>
    <string name="btn_sure">Sure</string>
    <string name="btn_update_design">Update Design</string>
    <string name="btn_yes">Yes</string>

    <!-- Body Messages -->
    <string name="body_delete_order">Are you sure you want to delete %1$s order?</string>
    <string name="body_password_recovery">You will receive instructions for restoring your password.</string>

    <!-- Descriptions -->
    <string name="desc_add_button">add button</string>
    <string name="desc_campaign_image">Campaign Image</string>
    <string name="desc_design_image">Design Image</string>
    <string name="desc_fab">Add</string>
    <string name="desc_remove_button">remove button</string>

    <!-- Hints -->
    <string name="hint_add_extras">Add Extras</string>
    <string name="hint_address">Address</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_description">Description</string>
    <string name="hint_email">Email</string>
    <string name="hint_extras_total">Extras Total</string>
    <string name="hint_final_campaign_date">Final Date Range</string>
    <string name="hint_instagram_username">Instagram Username</string>
    <string name="hint_initial_campaign_date">Initial Date</string>
    <string name="hint_name">Name</string>
    <string name="hint_order_item_comment">Order Item Comment</string>
    <string name="hint_password">Password</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_price">Price</string>
    <string name="hint_search">Search</string>
    <string name="hint_shipping_company">Shipping Company</string>
    <string name="hint_shipping_price">Shipping Price</string>
    <string name="hint_tracking_code">Tracking Code</string>

    <!-- Labels -->
    <string name="label_campaign_detail">Campaign Detail</string>
    <string name="label_campaigns">Campaigns</string>
    <string name="label_designs">Designs</string>
    <string name="label_home">Home</string>
    <string name="label_login">Login</string>
    <string name="label_new_campaign">New Campaign</string>
    <string name="label_new_design">New Design</string>
    <string name="label_new_order">New Order</string>
    <string name="label_order_detail">Order Detail</string>
    <string name="label_password_recovery">Password Recovery</string>
    <string name="label_preferences">Preferences</string>
    <string name="label_sign_up">Sign Up</string>
    <string name="label_update_campaign">Update Campaign</string>
    <string name="label_update_design">Update Design</string>
    <string name="label_update_order">Update Order</string>

    <!-- Menu Items -->
    <string name="menu_color">Color</string>
    <string name="menu_delete_campaign">Delete Campaign</string>
    <string name="menu_delete_design">Delete Design</string>
    <string name="menu_export_orders">Export Orders</string>
    <string name="menu_group">Group</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_new_campaign">New Campaign</string>
    <string name="menu_new_design">New Design</string>
    <string name="menu_new_order">New Order</string>
    <string name="menu_size">Size</string>
    <string name="menu_type">Type</string>
    <string name="menu_update_campaign">Update Campaign</string>
    <string name="menu_update_design">Update Design</string>

    <!-- Messages -->
    <string name="message_add_new_presentations">Do you want to add different presentations (hoodie, crewneck, etc…) to this design? You can add them later.</string>
    <string name="message_delete_campaign">All orders associated with this campaign will also be deleted</string>
    <string name="message_delete_design">Are you sure you want to delete this design? This action cannot be undone.</string>
    <string name="message_unsaved_changes">You have unsaved changes. Do you want to discard them?</string>

    <!-- Prefix -->
    <string name="prefix_price">$</string>

    <!-- Switches -->
    <string name="switch_label_campaign_status">Set this campaign as active</string>
    <string name="switch_shipping_paid">Shipping Paid</string>

    <!-- Titles -->
    <string name="title_add_new_color">Add new color</string>
    <string name="title_add_new_presentations">Add new presentations</string>
    <string name="title_add_new_size">Add New Size</string>
    <string name="title_add_new_type">Add New Presentation</string>
    <string name="title_colors">Colors</string>
    <string name="title_delete_campaign">Are you sure to delete %1$s campaign?</string>
    <string name="title_delete_design">Delete %1$s?</string>
    <string name="title_delete_order">Delete Order</string>
    <string name="title_password_recovery">Password Recovery.</string>
    <string name="title_select_order_products">Select Order Product</string>
    <string name="title_warning">Warning</string>

    <!-- Toast   -->
    <string name="toast_create_campaign">Please create a campaign first</string>

    <!-- Text -->
    <string name="txt_all_presentations">All Presentations</string>
    <string name="txt_campaign_items_by_group">Campaign Items By Group</string>
    <string name="txt_campaign_status">This campaign is currently active</string>
    <string name="txt_campaign_summary">Campaign Items By Color</string>
    <string name="txt_color_black">Black</string>
    <string name="txt_color_gray">Gray</string>
    <string name="txt_color_light_brown">Light Brown</string>
    <string name="txt_color_lilac">Lilac</string>
    <string name="txt_color_navy_blue">Navy Blue</string>
    <string name="txt_color_pink">Pink</string>
    <string name="txt_color_sand">Sand</string>
    <string name="txt_color_white">White</string>
    <string name="txt_crewneck">Crewneck</string>
    <string name="txt_crop_top">Crop Top</string>
    <string name="txt_customer_info">Customer Info</string>
    <string name="txt_extra_large">XL</string>
    <string name="txt_extras">Extras</string>
    <string name="txt_hoodie">Hoodie</string>
    <string name="txt_large">L</string>
    <string name="txt_medium">M</string>
    <string name="txt_order_extras">Order Extras</string>
    <string name="txt_order_extras_subtotal">Order Extras Subtotal:</string>
    <string name="txt_order_info">Order Info</string>
    <string name="txt_order_items">Order Items</string>
    <string name="txt_order_items_subtotal">Order Items Subtotal:</string>
    <string name="txt_shipment_info">Shipment Info</string>
    <string name="txt_size">Size</string>
    <string name="txt_small">S</string>
    <string name="txt_t_shirt">T-Shirt</string>
    <string name="txt_total">Total</string>
    <string name="txt_work_in_progress">Work in Progress</string>
    <string name="txt_cancelled">Cancelled</string>
    <string name="txt_presentations">Presentations</string>

</resources>