<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.presentation.NewPresentationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/screen_padding">

        <CheckBox
            android:id="@+id/checkbox_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_all_presentations"
            app:checkedState="indeterminate" />

        <LinearLayout
            android:id="@+id/checkbox_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/checkbox_crewneck"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_crewneck" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField_crewneck_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin_8dp"
                android:hint="@string/hint_price"
                android:visibility="gone"
                app:endIconMode="clear_text"
                app:prefixText="$">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/checkbox_hoodie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_hoodie" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField_hoodie_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin_8dp"
                android:hint="@string/hint_price"
                android:visibility="gone"
                app:endIconMode="clear_text"
                app:prefixText="$">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/checkbox_t_shirt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_t_shirt" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField_t_shirt_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin_8dp"
                android:hint="@string/hint_price"
                android:visibility="visible"
                app:endIconMode="clear_text"
                app:prefixText="$">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/checkbox_crop_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_crop_top" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField_crop_top_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin_8dp"
                android:hint="@string/hint_price"
                android:visibility="gone"
                app:endIconMode="clear_text"
                app:prefixText="$">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:text="@string/btn_save"/>

    </LinearLayout>

</ScrollView>
